--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<<!doctype html>
 <html lang="en">
   <head>
     <!-- Required meta tags -->
@@ -8,18 +8,18 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
-    <title>PHP home system!</title>
+    <title>PHP Home system!</title>
   </head>
-<body>
+  <body>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <a class="navbar-brand" href="#">Php Login System</a>
+  <a class="navbar-brand" href="#">Php Home System</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarNavDropdown">
   <ul class="navbar-nav">
       <li class="nav-item active">
-        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="index.html">Home</a> <!--<span class="sr-only">(current)</span></a>-->
       </li>
       <li class="nav-item">
         <a class="nav-link" href="register.php">Register</a>
@@ -39,14 +39,18 @@
 
 <div class="section">
 
-  <h2>Please Login To Enter The Paradise</h2>
-  <div style="background-image: url('bgImage.jpg');">
+  <h1>Please LOGIN To Enter Paradise</h1>
+
+  <div style="background-image: url('bgImage.jpg');"></div>
+
  <!-- <div class="video-container">
       <div class="color-overlay"></div>
       <video autoplay loop muted>
-        <source src="video1.mp4" type="video1/mp4">
+          <source src="video1.mp4" type="video1/mp4">
       </video>
-  </div>
--->
-</body>
+  </div>-->
+
+</div>
+
+  </body>
 </html>
