--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<<!doctype html>
+<!doctype html>
 <html lang="en">
   <head>
     <!-- Required meta tags -->
@@ -40,8 +40,16 @@
 <div class="section">
 
   <h1>Please LOGIN To Enter Paradise</h1>
+  <style>
+    body {
+      background-image: url('bgImage.jpg');
+      background-repeat: no-repeat;
+      background-attachment: fixed; 
+      background-size: 100% 100%;
+    }
+    </style>
 
-  <div style="background-image: url('bgImage.jpg');"></div>
+  <!--div style="background-image: url('bgImage.jpg');"></div-->
 
  <!-- <div class="video-container">
       <div class="color-overlay"></div>
